--- a/config-client.yml
+++ b/config-client.yml
@@ -7,6 +7,9 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     registry-fetch-interval-seconds: 5
+
+env: 
+    beta
 ---
 spring:
   profiles: dev
@@ -47,7 +50,7 @@ spring:
     # Redis 密码
     password: devRedis&123
   rabbitmq:
-    host: 192.168.20.4
+    host: localhost
     port: 5672
     username: guest
     password: guest
